objects/Investment__c.object
<CustomObject>
    <fields>
        <fullName>Accommodation_Line_Item_Amount__c</fullName>
        <label>Accommodation Line Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_Line_Total_Amount__c</fullName>
        <label>Accommodation Line Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Accommodation_Quantity__c</fullName>
        <label>Accommodation Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accommodation_Reason__c</fullName>
        <label>Accommodation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Transfer</fullName>
                </value>
                <value>
                    <fullName>Carrier Caused - HDL</fullName>
                </value>
                <value>
                    <fullName>Carrier Caused - UPS</fullName>
                </value>
                <value>
                    <fullName>Damaged/Defective Product</fullName>
                </value>
                <value>
                    <fullName>Delay - Backorder</fullName>
                </value>
                <value>
                    <fullName>Delay - DC</fullName>
                </value>
                <value>
                    <fullName>Delay - Vendor</fullName>
                </value>
                <value>
                    <fullName>Delight Shipping</fullName>
                </value>
                <value>
                    <fullName>Freight - Canadian Adjustment/Refund</fullName>
                </value>
                <value>
                    <fullName>Freight - Flat Rate Delivery Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Freight Refund</fullName>
                </value>
                <value>
                    <fullName>Freight - US Adjustment/Refund</fullName>
                </value>
                <value>
                    <fullName>Gift Box Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Gift Return</fullName>
                </value>
                <value>
                    <fullName>Mailed in Gift Card</fullName>
                </value>
                <value>
                    <fullName>Manual Charge</fullName>
                </value>
                <value>
                    <fullName>Out Of Policy Return</fullName>
                </value>
                <value>
                    <fullName>Personalization Fee Refund</fullName>
                </value>
                <value>
                    <fullName>Pre-Bill Refund</fullName>
                </value>
                <value>
                    <fullName>Refund for GC/SC/Reward MOP</fullName>
                </value>
                <value>
                    <fullName>Tax Refund</fullName>
                </value>
                <value>
                    <fullName>Price Match - Sale/Promo</fullName>
                </value>
                <value>
                    <fullName>Reissue System Refund - Incorrect/Cancelled/Did Not Generate</fullName>
                </value>
                <value>
                    <fullName>Price Match – Sale/Promo</fullName>
                    <isActive>false</isActive>
                    <label>Price Match – Sale/Promo</label>
                </value>
                <value>
                    <fullName>Reissue System Refund – Incorrect/Cancelled/Did Not Generate</fullName>
                    <isActive>false</isActive>
                    <label>Reissue System Refund – Incorrect/Cancelled/Did Not Generate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accommodation_Sub_Reason__c</fullName>
        <label>Accommodation Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CW_SKU_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CW SKU ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Line Item</label>
        <referenceTo>Case_Line_Items__c</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <formula>Case__r.Expected_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Line_Requested_Percentage__c</fullName>
        <label>Final Line Requested Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Flat_Rate_Amount__c</fullName>
        <label>Requested Flat Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Percentage__c</fullName>
        <label>Requested Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ship_To_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ship_To__c.Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Order__c</valueField>
            </filterItems>
            <infoMessage>Ship To 1 must reference the same order record referenced in the Order field.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>Resolutions</relationshipLabel>
        <relationshipName>Resolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Loaner</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resolution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Resolutions</fullName>
        <columns>NAME</columns>
        <columns>Issue__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Amount__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Resolutions</label>
        <sharedTo>
            <role>Administration</role>
            <role>HospitalityProductSupplyManager</role>
            <role>LargeIncrementalSalesRep</role>
            <role>LargeIncrlSalesLeader</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Resolution-{0}</displayFormat>
        <label>Resolution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resolutions</pluralLabel>
    <recordTypes>
        <fullName>Accommodation_Cash</fullName>
        <active>true</active>
        <description>Compensation for for an issue on an order -must be approved by POD Leader</description>
        <label>Accommodation - Cash</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accommodation_Freight_Discount</fullName>
        <active>true</active>
        <description>Adjust freight on the order due to transportation or delivery failiures</description>
        <label>Accommodation - Freight Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accommodation_Gift_Certificate</fullName>
        <active>true</active>
        <description>Compensation for for an issue on an order -must be approved by POD Leader</description>
        <label>Accommodation - Gift Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accommodation_Product_Gift</fullName>
        <active>true</active>
        <description>Compensation for for an issue on an order -must be approved by POD Leader</description>
        <label>Accommodation - Product Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accommodations</fullName>
        <active>false</active>
        <label>Accommodations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exchange_Product</fullName>
        <active>true</active>
        <description>Replaced with the same or similar item due to damage or defect</description>
        <label>Exchange Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loaner_Product</fullName>
        <active>true</active>
        <description>Product loaned to the customer at no cost due to product delays</description>
        <label>Loaner Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Discount</fullName>
        <active>true</active>
        <description>Match previously quoted procing or memebr pricing</description>
        <label>Product Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provide_Billing_Statement</fullName>
        <active>true</active>
        <description>Detailed breakdown of credit card charges/credits on the CW order</description>
        <label>Provide Billing Statement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reauthorize_credit_card</fullName>
        <active>true</active>
        <description>Release the order from CW hold to re run the credit card authorization</description>
        <label>Reauthorize credit card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recollect_payment</fullName>
        <active>true</active>
        <description>Resolve outstanding payment</description>
        <label>Recollect payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>true</active>
        <description>Refund back to the original from of payment</description>
        <label>Refund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repair_Customer_Property</fullName>
        <active>true</active>
        <description>Reimbursement for repair to propety damage inflicted by RH Delivery</description>
        <label>Repair Customer Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>Repair_Product_Furniture_Medic</fullName>
        <active>true</active>
        <description>Reimbursment for on site furniture repairs by third party Furniture Medic</description>
        <label>Repair Product/Furniture Medic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Replacement_Parts</fullName>
        <active>true</active>
        <description>Replacement for missing/lost part for previously purchased product</description>
        <label>Replacement Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return_Product</fullName>
        <active>true</active>
        <description>Refund to the origionsl form of paument for product that is damage or defective. Must be approved by Claire.</description>
        <label>Return Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party_Reimbursement</fullName>
        <active>true</active>
        <description>Reimbursement for services provided as a result of an RH Failure</description>
        <label>Third Party Reimbursement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>